--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-highcharts": "^12.0.0",
     "gridstack": "^5.0.0",
+    "highcharts": "^9.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
